single page product coding in progress

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -2,3 +2,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@media (max-width: 324px) {
+  .mobile-justify-start {
+    justify-content: start;
+  }
+}
